correct 3-col blog post spacing issue #964

--- a/assets/css/less/posts.less
+++ b/assets/css/less/posts.less
@@ -237,7 +237,7 @@
 	min-height: 100px;
 
 	& .download-grid-item-info {
-		padding: 20px 20px 0;
+		padding: 20px;
 
 		& .post-meta {
 			margin-bottom: 16px;
